src/objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <page>Knowledge_VFP</page>
            <template>Page</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Additional_Benefits__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Benefits</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Information</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Adjustment_Steps__c</fullName>
        <description>Restrict visibility by Profile - visible to all users across the company EXCEPT Processors, CSR&apos;s, Hybrid CSR&apos;s</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Adjustment Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Article_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Article Details</label>
        <length>41000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Article_Record_Type_Name__c</fullName>
        <description>Created to capture the record type name which is used in apex classes and visualforce pages to serve-up knowledge articles in Quest.</description>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Effective_Data__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date that enrolled benifits become effective</inlineHelpText>
        <label>Benefit Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Client-specific benefits</inlineHelpText>
        <label>Benefit</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Caller_Type__c</fullName>
        <label>Caller Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Retail Partner</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Cancel__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Change/Cancel</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Chat_Answer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Chat Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_exceptions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use the smartLink editor to insert a link to a specific client exceptions article.
Be sure to set Target as Iframe (main Topic).</inlineHelpText>
        <label>Client exceptions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Confirmation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Confirmation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contacts__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contacts</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Doctor_Network__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Doctor Network</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Eligibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>client requirements for eligibility</inlineHelpText>
        <label>Eligibility</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Enrollment_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date that open enrollments closes for members</inlineHelpText>
        <label>Enrollment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date that enrollment opens up for members</inlineHelpText>
        <label>Enrollment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exam__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exam</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Examples__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Examples</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Feedback_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feedback Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frame__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Frame</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>General_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>General Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_To_Enroll__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>How To Enroll</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Information__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Information</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Keyword</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Keywords</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lab__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lab</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lens_Enhancements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lens Enhancements</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lens__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lens</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Links__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Links</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Premiums_and_Billing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Premiums and Billing</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Procedure</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Processing_Steps__c</fullName>
        <description>Restrict visibility by Profile - visible to all users across the company EXCEPT CSR&apos;s</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Processing Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reason_Details__c</fullName>
        <label>Reason Details</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>10 or more Dependents</fullName>
                </value>
                <value>
                    <fullName>A - C</fullName>
                </value>
                <value>
                    <fullName>Accessing Eyefinity</fullName>
                </value>
                <value>
                    <fullName>Add/Update Member/Dependent</fullName>
                </value>
                <value>
                    <fullName>Adding Dependent</fullName>
                </value>
                <value>
                    <fullName>Additional Doctor Payments</fullName>
                </value>
                <value>
                    <fullName>Add Provider / Office</fullName>
                </value>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>Add Service(s)</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
                <value>
                    <fullName>Adjustments</fullName>
                </value>
                <value>
                    <fullName>All Other Providers</fullName>
                </value>
                <value>
                    <fullName>Authorizations</fullName>
                </value>
                <value>
                    <fullName>Available Benefits</fullName>
                </value>
                <value>
                    <fullName>Available Services</fullName>
                </value>
                <value>
                    <fullName>Backdating</fullName>
                </value>
                <value>
                    <fullName>Benefit Not Covered</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Benefits Description</fullName>
                </value>
                <value>
                    <fullName>Benefit Update</fullName>
                </value>
                <value>
                    <fullName>Call Handling</fullName>
                </value>
                <value>
                    <fullName>Change/Cancel</fullName>
                </value>
                <value>
                    <fullName>Change Service(s)</fullName>
                </value>
                <value>
                    <fullName>Check Eligibility</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Cigna</fullName>
                </value>
                <value>
                    <fullName>Claim/Out of Pocket Expenses</fullName>
                </value>
                <value>
                    <fullName>Claim Correction / Tracking</fullName>
                </value>
                <value>
                    <fullName>Claim Priced/Paid Date</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Caller_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>2020Source Assistance</fullName>
                </value>
                <value>
                    <fullName>AOB/OON Provider</fullName>
                </value>
                <value>
                    <fullName>Authorization</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Claim Payment</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Claims Adjustment</fullName>
                </value>
                <value>
                    <fullName>Client Benefits</fullName>
                </value>
                <value>
                    <fullName>Client Confidentiality</fullName>
                </value>
                <value>
                    <fullName>Client Exceptions</fullName>
                </value>
                <value>
                    <fullName>Client Website Assistance</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Confidentiality</fullName>
                </value>
                <value>
                    <fullName>Doctor_Referral</fullName>
                    <label>Doctor Referral</label>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Eyefinity Assistance</fullName>
                </value>
                <value>
                    <fullName>Language lines/Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Member Authorization</fullName>
                </value>
                <value>
                    <fullName>Member Benefits</fullName>
                </value>
                <value>
                    <fullName>Member Caller</fullName>
                </value>
                <value>
                    <fullName>Member Confidentiality</fullName>
                </value>
                <value>
                    <fullName>Member Experience</fullName>
                </value>
                <value>
                    <fullName>Member Website Assistance</fullName>
                </value>
                <value>
                    <fullName>OON Caller</fullName>
                </value>
                <value>
                    <fullName>Out of Network Claims</fullName>
                </value>
                <value>
                    <fullName>Potential Members</fullName>
                </value>
                <value>
                    <fullName>Provider/Office Update</fullName>
                </value>
                <value>
                    <fullName>Provider Authorization</fullName>
                </value>
                <value>
                    <fullName>Provider Benefits</fullName>
                </value>
                <value>
                    <fullName>Provider Confidentiality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_Queue_Steps__c</fullName>
        <description>Restrict visibility by Profile - visible to all users across the company EXCEPT Processors, CSR&apos;s, Hybrid CSR&apos;s and CART</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SQ/QQ Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Topic_Links__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Topic Links</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Version_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Version Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Knowledge</label>
    <listViews>
        <fullName>Updated</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>TITLE</columns>
        <columns>Version_Comments__c</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/1/2019 12:00 AM</value>
        </filters>
        <label>New &amp; Updated Articles</label>
        <sharedTo>
            <role>VSP_Customer_Care_C_G</role>
            <role>VSP_Customer_Care_Leadership</role>
            <role>VSP_Customer_Care_SQ_QQ</role>
            <role>VSP_Customer_Care_USC</role>
            <role>VSP_Vision_Benefits_CSR</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Published Articles</label>
    </listViews>
    <pluralLabel>Knowledge</pluralLabel>
    <recordTypes>
        <fullName>Additional_Benefits</fullName>
        <active>true</active>
        <label>Additional Benefits</label>
    </recordTypes>
    <recordTypes>
        <fullName>C_G_Article</fullName>
        <active>true</active>
        <label>C&amp;G Article</label>
    </recordTypes>
    <recordTypes>
        <fullName>Category_Tab_Link</fullName>
        <active>true</active>
        <label>Category Tab Link</label>
    </recordTypes>
    <recordTypes>
        <fullName>Core_Benefit</fullName>
        <active>true</active>
        <label>Core Benefit</label>
    </recordTypes>
    <recordTypes>
        <fullName>External_Publication</fullName>
        <active>true</active>
        <label>External Publication</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Article_Template</fullName>
        <active>true</active>
        <label>General Article Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>Multi_Topic</fullName>
        <active>true</active>
        <label>Multi Topic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Multi_Topic_Details</fullName>
        <active>true</active>
        <label>Multi Topic Details</label>
    </recordTypes>
    <recordTypes>
        <fullName>Open_Enrollment</fullName>
        <active>true</active>
        <label>Open Enrollment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Procedure</fullName>
        <active>true</active>
        <label>Procedure</label>
    </recordTypes>
    <recordTypes>
        <fullName>Provider_Solutions_Community</fullName>
        <active>true</active>
        <label>Provider Solutions Community</label>
    </recordTypes>
    <recordTypes>
        <fullName>Single_Topic</fullName>
        <active>true</active>
        <label>Single Topic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Support_Queue</fullName>
        <active>true</active>
        <label>Support Queue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Universal_Service</fullName>
        <active>true</active>
        <label>Universal Service</label>
    </recordTypes>
</CustomObject>